fix: Center navbar elements on collapse

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ h1 {
     background: #ff8c00;
 }
 
+.navbar .navbar-collapse {
+    text-align: center;
+}
+
 /* Banner
     -------------------------------------------------- */
 
